# MCGA

./: .copier-answers.yml  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  tox.ini
docs/source/: conf.py
docs/source/api/: mcga.rst  modules.rst
notebooks/: gemini_reaction_prediction.ipynb  project_report_mcga.ipynb
src/mcga/: __init__.py  app.py  app2.py  balancing_equations.py  cli.py  lookup.py  metrics.py  parsers.py  scoring.py  streamlit_input_.py
src/mcga/.streamlit/: secrets.toml
src/mcga/streamlit_dependencies/: app.py  balancing_equations.py  condition_predictor.py  streamlit_input_.py  streamlit_input_cherchersurinternet.py
tests/: test_example_module.py  test_module.py
