[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcga"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
description = "Green‐chemistry reaction greenness calculator"


dependencies = [
    "numpy<2",
    "streamlit",
    "streamlit-ketcher",
    "pubchempy",
    "requests",
    "google-generativeai",
    "jupyterlab",
    "chempy",
    "py3Dmol"
]
authors = [
     {name = "Jiho", email = "jiho.keum@epfl.ch"},
    {name = "Bilel Noé Bouzouaid", email = "bilel-noe.bouzouaid@epfl.ch"},
    {name = "Alexia Dade", email = "alexia.dade@epfl.ch"},
    {name = "Ylann Willemin", email = "ylann.willemin@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/jihokeum/mcga"
tracker = "https://github.com/jihokeum/mcga/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/mcga/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

